--- a/website/front-end/src/scss/_elements.scss
+++ b/website/front-end/src/scss/_elements.scss
@@ -1,14 +1,39 @@
+@import './variables';
+
+body {
+  background-color: white;
+  font-weight: 400;
+  font-size: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+i {
+  font-size: 2rem !important;
+  color: $app-primary-color;
+}
+
+th {
+  color: $app-secondary-color;
+}
+
 .carousel-control {
-    &-prev {
-        width: 1rem;
-    }
-    &-next {
-        width: 1rem;
-    }
+  &-prev {
+    width: 1rem;
+  }
+
+  &-next {
+    width: 1rem;
+  }
 }
+
 .card {
-    margin-bottom: 0.75rem;
+  margin-bottom: 0.75rem;
 }
+
 .card-header {
-    padding: 0.25rem 0.75rem;
+  padding: 0.25rem 0.75rem;
+}
+
+.main .container-fluid {
+  padding: 0px;
 }
