--- a/website/front-end/src/scss/_variables.scss
+++ b/website/front-end/src/scss/_variables.scss
@@ -1,5 +1,7 @@
 // Variable overrides
-$app-secondary-color: #2A3E55;
-$app-primary-color: #01D251;
+$app-secondary-color: #2f353a;
+$app-secondary-color-light: #00742b;
+// $app-primary-color: #01D251;
+$app-primary-color: #41f041;
 
 $app-font-color-light: white;
