--- a/website/front-end/src/views/Release/ReleaseSummary/ReleaseSummary.scss
+++ b/website/front-end/src/views/Release/ReleaseSummary/ReleaseSummary.scss
@@ -7,9 +7,15 @@
   // width: 43rem;
 }
 
-.rp-summary-tables {
-  margin: 1.5rem;
-  border-style: solid;
-  border-width: 1px;
-  padding: 0.5rem;
-}
+
+
+
+// font-size: 14px;
+// margin: 3.5rem;
+// margin-right: 0.2rem;
+// border-style: solid;
+// border-color: white;
+// border-width: 1px;
+// padding: 1.5rem;
+// /* border-radius: 1rem; */
+// box-shadow: 
