--- a/website/front-end/src/components/AppTable/AppTable.scss
+++ b/website/front-end/src/components/AppTable/AppTable.scss
@@ -1,12 +1,14 @@
 @import '../../scss/variables';
 
-.rp-app-table-title {
-  color: $app-secondary-color;
-  font-size: 18px;
-  font-weight: 500;
-}
 
-.rp-apptable-features .table-responsive {
+.rp-app-table-small .table-responsive {
   overflow-y: scroll;
   max-height: 18rem;
+  scrollbar-width: 1rem;
+}
+
+.rp-app-table-medium .table-responsive {
+  overflow-y: scroll;
+  max-height: 30rem;
+  scrollbar-width: 1rem;
 }
