--- a/website/front-end/src/scss/_elements.scss
+++ b/website/front-end/src/scss/_elements.scss
@@ -3,12 +3,12 @@
 body {
   background-color: white;
   font-weight: 400;
-  font-size: 16px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  overflow-x: hidden;
 }
 
 i {
-  font-size: 2rem !important;
+  font-size: 1rem !important;
   color: $app-primary-color;
 }
 
@@ -36,4 +36,76 @@ th {
 
 .main .container-fluid {
   padding: 0px;
+}
+
+.rp-app-table-title {
+  color: $app-primary-color;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.rp-summary-tables {
+  font-size: 14px;
+  margin: 3.5rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-right: 0.2rem;
+  border-style: solid;
+  border-color: white;
+  border-width: 1px;
+  padding: 0rem;
+  box-shadow: 2px 4px 8px 4px rgba(0, 0, 0, 0.2);
+
+  &:hover {
+    box-shadow: 4px 8px 12px 8px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.rp-app-table-header {
+  background-color: $app-secondary-color;
+  // background-color: #2f353a;
+  padding: 0.5rem;
+}
+
+.rp-app-table-key {
+  color: $app-secondary-color-light;
+  font-weight: 600;
+}
+
+.rp-rs-hw-support {
+  margin-left: 0.5rem;
+  font-size: 18px;
+  margin-top: 0.2rem;
+  color: $app-secondary-color;
+  font-weight: 600;
+}
+
+.rp-any-button {
+  background-color: $app-secondary-color !important;
+  color: $app-primary-color !important;
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.table th,
+.table td {
+  font-size: 16px;
+  padding: 0.4rem;
+  vertical-align: top;
+  border-top: 1px solid #c8ced3;
+}
+
+.sidebar .nav-link {
+  color: $app-primary-color !important;
+}
+
+.app-header .nav-item .nav-link {
+  font-weight: 600;
+  margin-right: 1rem;
+  font-size: 16px;
+  color: $app-secondary-color-light;
+}
+
+.canvasjs-chart-credit {
+  display: none !important;
 }
