--- a/website/front-end/src/scss/_variables.scss
+++ b/website/front-end/src/scss/_variables.scss
@@ -5,3 +5,6 @@ $app-secondary-color-light: #00742b;
 $app-primary-color: #41f041;
 
 $app-font-color-light: white;
+
+$app-fail-color: #FF6384;
+$app-pass-color: #36A2EB;
