--- a/website/front-end/src/views/Release/ReleaseSummary/ReleaseSummary.scss
+++ b/website/front-end/src/views/Release/ReleaseSummary/ReleaseSummary.scss
@@ -8,6 +8,12 @@
 }
 
 
+.rp-rs-down-arrow {
+  margin-right: 0.6rem;
+  color: #00742b;
+  font-size: 2rem !important;
+  cursor: pointer;
+}
 
 
 // font-size: 14px;
