--- a/website/front-end/src/scss/_elements.scss
+++ b/website/front-end/src/scss/_elements.scss
@@ -1,7 +1,9 @@
 @import './variables';
 
 body {
-  background-color: white;
+  // change 1
+  // background-color: white;
+  background-color: rgba(228, 229, 230, 0.3);
   font-weight: 400;
   font-size: 14px;
   overflow-x: hidden;
@@ -9,7 +11,9 @@ body {
 
 i {
   font-size: 1rem !important;
-  color: $app-primary-color;
+  // Change
+  // color: $app-primary-color;
+  color: $app-secondary-color-light;
 }
 
 th {
@@ -39,37 +43,153 @@ th {
 }
 
 .rp-app-table-title {
-  color: $app-primary-color;
-  font-size: 20px;
+  //change
+  color: $app-secondary-color;
+  font-size: 17px;
   font-weight: 500;
 }
 
+//change 2
 .rp-summary-tables {
+  background-color: white;
   font-size: 14px;
-  margin: 3.5rem;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-  margin-right: 0.2rem;
-  border-style: solid;
-  border-color: white;
-  border-width: 1px;
-  padding: 0rem;
-  box-shadow: 2px 4px 8px 4px rgba(0, 0, 0, 0.2);
+  margin: 1rem .2rem 1rem 3.5rem;
+  border: 1px solid #fff;
+  padding: 0.4rem;
+  box-shadow: 2px 4px 8px 4px rgba(65, 240, 56, 0.3);
 
   &:hover {
     box-shadow: 4px 8px 12px 8px rgba(0, 0, 0, 0.2);
   }
 }
 
+// .rp-summary-tables {
+//   font-size: 14px;
+//   margin: 3.5rem;
+//   margin-bottom: 1rem;
+//   margin-top: 1rem;
+//   margin-right: 0.2rem;
+//   border-style: solid;
+//   border-color: white;
+//   border-width: 1px;
+//   padding: 0rem;
+//   box-shadow: 2px 4px 8px 4px rgba(0, 0, 0, 0.2);
+
+//   &:hover {
+//     box-shadow: 4px 8px 12px 8px rgba(0, 0, 0, 0.2);
+//   }
+// }
+
+.rp-open-status-badge {
+  color: white;
+  font-size: 1rem;
+  background-color: $app-pass-color;
+  font-weight: 400;
+}
+
+.rp-array-badge {
+  color: white;
+  font-size: 1rem;
+  background-color: $app-secondary-color-light;
+  font-weight: 400;
+  margin: 0.2rem;
+}
+
+.rp-bug-Total-status-badge {
+  color: white;
+  font-size: 1rem;
+  background-color: $app-pass-color;
+  font-weight: 400;
+  margin: 0.2rem;
+}
+
+.rp-bug-Closed-status-badge {
+  color: white;
+  font-size: 1rem;
+  background-color: $app-secondary-color-light;
+  font-weight: 400;
+  margin: 0.2rem;
+}
+
+.rp-bug-Open-status-badge {
+  color: white;
+  font-size: 1rem;
+  background-color: #d9534f;
+  font-weight: 400;
+  margin: 0.2rem;
+}
+
+.rp-feature-Open-status-badge {
+  color: white;
+  font-size: 1rem;
+  background-color: $app-pass-color;
+  font-weight: 400;
+  margin: 0.2rem;
+}
+
+.rp-feature-Resolved-status-badge {
+  color: white;
+  font-size: 1rem;
+  background-color: $app-secondary-color-light;
+  font-weight: 400;
+  margin: 0.2rem;
+}
+
+.rp-feature-Closed-status-badge {
+  color: white;
+  font-size: 1rem;
+  background-color: $app-secondary-color-light;
+  font-weight: 400;
+  margin: 0.2rem;
+}
+
+.rp-priority-Medium-status-badge {
+  color: black;
+  font-size: 1rem;
+  background-color: #FFCE56;
+  font-weight: 400;
+  margin: 0.2rem;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+}
+
+.rp-priority-Highest-status-badge {
+  color: black;
+  font-size: 1rem;
+  background-color: #d9534f;
+  font-weight: 400;
+  margin: 0.2rem;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+}
+
+.rp-priority-Low-status-badge {
+  color: black;
+  font-size: 1rem;
+  background-color: $app-primary-color;
+  font-weight: 400;
+  margin: 0.2rem;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+}
+
+
 .rp-app-table-header {
-  background-color: $app-secondary-color;
-  // background-color: #2f353a;
-  padding: 0.5rem;
+  // change
+  // background-color: $app-secondary-color;
+  // // background-color: #2f353a;
+  // padding: 0.5rem;
+  // background-color: rgba(65, 240, 65, 0.3);
+  // background-color: rgba(0, 116, 43, 0.3);
 }
 
 .rp-app-table-key {
   color: $app-secondary-color-light;
-  font-weight: 600;
+  //change
+  font-weight: 400;
 }
 
 .rp-rs-hw-support {
@@ -108,4 +228,42 @@ th {
 
 .canvasjs-chart-credit {
   display: none !important;
+}
+
+
+
+// changes
+.sidebar .nav-link {
+  /* color: #41f041 !important; */
+  color: #3a4248 !important;
+}
+
+.sidebar .nav-link {
+  display: block;
+  padding: 0.75rem 1rem;
+  color: #fff;
+  text-decoration: none;
+  background: transparent;
+}
+
+.sidebar .sidebar-minimizer {
+  background-color: white;
+  position: relative;
+  flex: 0 0 50px;
+  cursor: pointer;
+  /* background-color: rgba(0, 0, 0, 0.2); */
+  border: 0;
+}
+
+.sidebar .nav {
+  width: 200px;
+  flex-direction: column;
+  min-height: 100%;
+  padding: 0;
+  background-color: white;
+}
+
+.sidebar .nav-link.active {
+  color: #3a4248 !important;
+  background: white;
 }
