--- a/website/front-end/src/containers/DefaultLayout/DefaultContainer.scss
+++ b/website/front-end/src/containers/DefaultLayout/DefaultContainer.scss
@@ -25,3 +25,14 @@
   margin-top: 1rem;
   max-width: 15rem;
 }
+.rp-app-table-title { 
+  text-transform: uppercase;
+}
+
+.d-md-down-none{
+  position: absolute;
+  right: 100px;
+}
+ .navbar {
+  height: 65px;
+}
