--- a/website/front-end/src/scss/_elements.scss
+++ b/website/front-end/src/scss/_elements.scss
@@ -44,9 +44,12 @@ th {
 
 .rp-app-table-title {
   //change
-  color: $app-secondary-color;
-  font-size: 17px;
-  font-weight: 500;
+  font-family: Open Sans, sans-serif;
+  font-size: 13px;
+  font-weight: 550;
+  color: $app-secondary-color-light;
+
+
 }
 
 //change 2
@@ -56,7 +59,7 @@ th {
   margin: 1rem .2rem 1rem 3.5rem;
   border: 1px solid #fff;
   padding: 0.4rem;
-  box-shadow: 2px 4px 8px 4px rgba(65, 240, 56, 0.3);
+  box-shadow: 2px 4px 8px 4px rgba(44, 51, 73, 0.1);
 
   &:hover {
     box-shadow: 4px 8px 12px 8px rgba(0, 0, 0, 0.2);
@@ -89,7 +92,7 @@ th {
 
 .rp-array-badge {
   color: white;
-  font-size: 1rem;
+  font-size: 12px;
   background-color: $app-secondary-color-light;
   font-weight: 400;
   margin: 0.2rem;
@@ -184,12 +187,15 @@ th {
   // padding: 0.5rem;
   // background-color: rgba(65, 240, 65, 0.3);
   // background-color: rgba(0, 116, 43, 0.3);
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .rp-app-table-key {
   color: $app-secondary-color-light;
-  //change
   font-weight: 400;
+  font-size: 12px;
+  font-family: Open Sans, sans-serif;
 }
 
 .rp-rs-hw-support {
@@ -209,20 +215,27 @@ th {
 
 .table th,
 .table td {
-  font-size: 16px;
   padding: 0.4rem;
   vertical-align: top;
   border-top: 1px solid #c8ced3;
+  font-weight: 400;
+  font-size: 12px;
+  font-family: Open Sans, sans-serif;
 }
-
+.sidebar {
+  height: calc(100vh - 65px);
+  margin-top: 10px;
+}
 .sidebar .nav-link {
   color: $app-primary-color !important;
 }
 
 .app-header .nav-item .nav-link {
-  font-weight: 600;
-  margin-right: 1rem;
-  font-size: 16px;
+  font-family: Open Sans, sans-serif;
+font-size: 0.9375rem;
+font-weight: 400;
+line-height: 1.25rem;
+border-bottom: 1px solid #edf1f7;
   color: $app-secondary-color-light;
 }
 
@@ -235,15 +248,32 @@ th {
 // changes
 .sidebar .nav-link {
   /* color: #41f041 !important; */
-  color: #3a4248 !important;
+  // color: #3a4248 !important;
+}
+
+// changes
+.sidebar .nav-item {
+  
+// color: #1a2138;
+font-family: Open Sans, sans-serif;
+font-size: 0.9375rem;
+font-weight: 400;
+line-height: 1.25rem;
+border-bottom: 1px solid #edf1f7;
 }
 
 .sidebar .nav-link {
-  display: block;
-  padding: 0.75rem 1rem;
-  color: #fff;
-  text-decoration: none;
-  background: transparent;
+  font-family: Open Sans, sans-serif;
+  font-size: 0.8125rem;
+  font-weight: 600;
+  line-height: 1.5rem;
+  color: $app-secondary-color-light;
+
+  // display: block;
+  // padding: 0.75rem 1rem;
+  // color: #fff;
+  // text-decoration: none;
+  // background: transparent;
 }
 
 .sidebar .sidebar-minimizer {
@@ -270,9 +300,11 @@ th {
 
 .table th,
 .table td {
-  font-size: 16px;
   padding: 0.4rem;
   vertical-align: top;
   border-top: 1px solid #c8ced3;
   width: 50%;
+  font-weight: 400;
+  font-size: 12px;
+  font-family: Open Sans, sans-serif;
 }
