--- a/website/front-end/src/scss/_variables.scss
+++ b/website/front-end/src/scss/_variables.scss
@@ -1,8 +1,8 @@
 // Variable overrides
 $app-secondary-color: #2f353a;
-$app-secondary-color-light: #00742b;
+$app-secondary-color-light: #003168;
 // $app-primary-color: #01D251;
-$app-primary-color: #41f041;
+$app-primary-color: #1a2138;
 
 $app-font-color-light: white;
 
