--- a/website/front-end/src/scss/_elements.scss
+++ b/website/front-end/src/scss/_elements.scss
@@ -222,20 +222,23 @@ th {
   font-size: 12px;
   font-family: Open Sans, sans-serif;
 }
+
 .sidebar {
   height: calc(100vh - 65px);
   margin-top: 10px;
 }
+
 .sidebar .nav-link {
-  color: $app-primary-color !important;
+  // color: $app-primary-color !important;
+  color: $app-secondary-color-light !important;
 }
 
 .app-header .nav-item .nav-link {
   font-family: Open Sans, sans-serif;
-font-size: 0.9375rem;
-font-weight: 400;
-line-height: 1.25rem;
-border-bottom: 1px solid #edf1f7;
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 1.25rem;
+  border-bottom: 1px solid #edf1f7;
   color: $app-secondary-color-light;
 }
 
@@ -244,22 +247,47 @@ border-bottom: 1px solid #edf1f7;
 }
 
 
-
-// changes
-.sidebar .nav-link {
-  /* color: #41f041 !important; */
-  // color: #3a4248 !important;
-}
-
 // changes
 .sidebar .nav-item {
-  
-// color: #1a2138;
-font-family: Open Sans, sans-serif;
-font-size: 0.9375rem;
-font-weight: 400;
-line-height: 1.25rem;
-border-bottom: 1px solid #edf1f7;
+
+  // color: #1a2138;
+  font-family: Open Sans, sans-serif;
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 1.25rem;
+  border-bottom: 1px solid #edf1f7;
+
+  // &:last-child .nav-link {
+  //   color: $app-primary-color !important;
+
+  // }
+
+  &:last-child .nav-link.active {
+    color: $app-secondary-color !important;
+    background-color: white;
+
+    &:hover {
+      color: $app-secondary-color !important;
+      background-color: $app-primary-color !important;
+    }
+
+    &:hover .nav-icon {
+      color: $app-secondary-color !important;
+    }
+  }
+
+  &:last-child .nav-link.active .nav-icon {
+    color: $app-secondary-color !important;
+
+    &:hover {
+      color: $app-primary-color !important;
+    }
+  }
+
+  // &:hover {
+  //   // background-color: $app-primary-color !important;
+  //   color: $app-secondary-color !important;
+  // }
 }
 
 .sidebar .nav-link {
@@ -269,21 +297,43 @@ border-bottom: 1px solid #edf1f7;
   line-height: 1.5rem;
   color: $app-secondary-color-light;
 
-  // display: block;
-  // padding: 0.75rem 1rem;
-  // color: #fff;
-  // text-decoration: none;
-  // background: transparent;
+  &:hover {
+    background-color: $app-primary-color !important;
+    color: $app-secondary-color !important;
+  }
 }
 
-.sidebar .sidebar-minimizer {
-  background-color: white;
-  position: relative;
-  flex: 0 0 50px;
-  cursor: pointer;
-  /* background-color: rgba(0, 0, 0, 0.2); */
-  border: 0;
+// changes
+.sidebar .nav-link {
+  /* color: #41f041 !important; */
+  // color: #3a4248 !important;
 }
+
+.sidebar .nav-link .nav-icon {
+  color: $app-secondary-color-light !important;
+
+  &:last-child {
+    color: $app-secondary-color !important;
+  }
+
+  &:last-child:hover {
+    color: $app-primary-color !important;
+  }
+
+  &:hover {
+    color: $app-secondary-color !important;
+  }
+}
+
+.sidebar .nav-link.active .nav-icon {
+  color: $app-primary-color !important;
+
+  &:hover {
+    color: $app-secondary-color !important;
+
+  }
+}
+
 
 .sidebar .nav {
   width: 200px;
@@ -294,8 +344,27 @@ border-bottom: 1px solid #edf1f7;
 }
 
 .sidebar .nav-link.active {
-  color: #3a4248 !important;
-  background: white;
+  // color: #3a4248 !important;
+  // color: $app-secondary-color !important;
+  color: $app-primary-color !important;
+  // background: white;
+  background-color: $app-secondary-color;
+
+  &:hover {
+    color: $app-primary-color !important;
+    background-color: $app-secondary-color !important;
+  }
+}
+
+
+
+.sidebar .sidebar-minimizer {
+  background-color: white;
+  position: relative;
+  flex: 0 0 50px;
+  cursor: pointer;
+  /* background-color: rgba(0, 0, 0, 0.2); */
+  border: 0;
 }
 
 .table th,
@@ -308,3 +377,78 @@ border-bottom: 1px solid #edf1f7;
   font-size: 12px;
   font-family: Open Sans, sans-serif;
 }
+
+.rp-new-badge {
+  padding: 0.3rem !important;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+
+.c-callout {
+  position: relative;
+  padding: 0 1rem;
+  margin: 1rem 0;
+  border-radius: .25rem;
+}
+
+html:not([dir=rtl]) .c-callout-total {
+  border-left-color: #39f !important;
+}
+
+html:not([dir=rtl]) .c-callout-open {
+  border-left-color: #e55353 !important;
+}
+
+html:not([dir=rtl]) .c-callout-closed {
+  border-left-color: #2eb85c !important;
+}
+
+html:not([dir=rtl]) .c-callout-resolved {
+  border-left-color: #2eb85c !important;
+}
+
+html:not([dir=rtl]) .c-callout-medium {
+  border-left-color: #ffc107 !important;
+}
+
+html:not([dir=rtl]) .c-callout-highest {
+  border-left-color: #e55353 !important;
+}
+
+html:not([dir=rtl]) .c-callout-high {
+  border-left-color: #df5c11 !important;
+}
+
+html:not([dir=rtl]) .c-callout-low {
+  border-left-color: rgb(0, 130, 251) !important;
+}
+
+html:not([dir=rtl]) .c-callout-lowest {
+  border-left-color: rgb(46, 0, 251) !important;
+}
+
+html:not([dir=rtl]) .c-callout {
+  border-left: 4px solid #d8dbe0;
+}
+
+html:not([dir=rtl]) .c-callout-duplicate {
+  border-left-color: #2eb85c !important;
+}
+
+html:not([dir=rtl]) .c-callout-info {
+  border-left-color: #2eb85c !important;
+}
+
+html:not([dir=rtl]) .c-callout-not-a-bug {
+  border-left-color: #2eb85c !important;
+}
+
+// '#e55353',
+// //fail
+// '#2eb85c',
+// //pass
+// '#ffc107',
+// //blocked
+// '#39f',
+// //not yet
