--- a/website/front-end/src/scss/_variables.scss
+++ b/website/front-end/src/scss/_variables.scss
@@ -8,5 +8,15 @@ $app-primary-color: #01D251;
 
 $app-font-color-light: white;
 
-$app-fail-color: #FF6384;
+$app-fail-color: #ED6648;
 $app-pass-color: #36A2EB;
+
+$app-not-tested-color: rgb(255, 161, 99);
+
+$app-warning-color:#F9D55B;
+$app-pass-color: #68C083;
+$app-total-color: #36A2EB;
+$app-storage-color: rgb(242, 143, 31);
+$app-network-color: rgb(32, 114, 178);
+$app-management-color: rgb(195, 25, 126);
+$app-others-color: rgb(140, 189, 63);
