--- a/website/front-end/src/views/Release/components/SunburstComponent.scss
+++ b/website/front-end/src/views/Release/components/SunburstComponent.scss
@@ -1,11 +1,11 @@
-// .app-sunburst-show {
-//   visibility: visible;
-// }
+.app-sunburst-show {
+  visibility: visible;
+}
 
-// .app-sunburst-hidden {
-//   visibility: hidden;
-// }
+.app-sunburst-hidden {
+  visibility: hidden;
+}
 
-// .app-sunburst-label {
-//   text-align: center;
-// }
+.app-sunburst-label {
+  text-align: center;
+}
